# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,8 @@ import healthRouter from "./health";
 import companiesRouter from "./companies";
 import coursesRouter from "./courses";
 import sessionsRouter from "./sessions";
+import studentsRouter from "./students";
+import attendanceRouter from "./attendance";
 
 const router: IRouter = Router();
 
@@ -10,5 +12,7 @@ router.use(healthRouter);
 router.use(companiesRouter);
 router.use(coursesRouter);
 router.use(sessionsRouter);
+router.use(studentsRouter);
+router.use(attendanceRouter);
 
 export default router;
